# aws-greengrass-client-device-auth

./: .gitignore  CONTRIBUTING.md  README.md  gdk-config.json  generate-parser.sh  pom.xml  recipe.json  recipe.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/scripts/: benchmark-comment.js
.github/workflows/: benchmark.yml  maven.yml  otf.yml  otf3.yml  otf5.yml  uat.yml
.license/: style.xml
benchmark/: README.md  pom.xml  run-benchmarks.sh
src/main/java/com/aws/greengrass/certificatemanager/: CertificateManager.java  Constants.java  DCMService.java  GetShadowVersionResponse.java  ShadowDeltaMessage.java
src/main/java/com/aws/greengrass/cisclient/: CISClient.java  CISClientException.java  ConnectivityInfoItem.java  ConnectivityInfoProvider.java  GetConnectivityInfoRequest.java  GetConnectivityInfoResponse.java
src/main/java/com/aws/greengrass/dcmclient/: Client.java  ClientException.java  DataPlaneClient.java  DataPlaneClientBaseBuilder.java  DataPlaneClientBaseDefaultBuilder.java  DataPlaneClientBuilder.java  DataPlaneClientDefaultBuilder.java  DataPlaneClientMarshaller.java  DataPlaneDefaultClient.java  DataPlaneGetConnectivityInfoRequestMarshaller.java  DataPlaneUpdateConnectivityInfoRequestMarshaller.java
src/main/java/com/aws/greengrass/device/: AttributeProvider.java  AuthorizationRequest.java  ClientDevicesAuthService.java  ClientDevicesAuthServiceApi.java  DeviceAttribute.java  DeviceAuthClient.java  DeviceSupportService.java  PermissionEvaluationUtils.java  Session.java  SessionImpl.java  SessionManager.java
src/main/java/com/aws/greengrass/ipc/: AuthorizeClientDeviceActionOperationHandler.java  GetClientDeviceAuthTokenOperationHandler.java  IPCUtils.java  PutComponentMetricOperationHandler.java  SubscribeToCertificateUpdatesOperationHandler.java  VerifyClientDeviceIdentityOperationHandler.java
src/main/java/com/aws/greengrass/util/: ClientUtil.java  ParseIPAddress.java  ResizableLinkedBlockingQueue.java
src/main/javacc/: RuleExpression.jj  RuleExpression.jjt
src/test/java/com/aws/greengrass/certificatemanager/: CertificateManagerTest.java  DCMServiceTest.java
src/test/java/com/aws/greengrass/cisclient/: CISClientTest.java  ConnectivityInfoProviderTest.java
src/test/java/com/aws/greengrass/dcmclient/: ClientTest.java  DataPlaneClientDefaultTest.java  DataPlaneClientMarshallerTest.java  DataPlaneGetConnectivityInfoRequestMarshallerTest.java  DataPlaneUpdateConnectivityInfoRequestMarshallerTest.java
uat/: README.md  pom.xml
uat/codebuild/: uat_linux_buildspec.yaml
uat/custom-components/: README.md  pom.xml
uat/custom-components/client-ipc/: pom.xml
uat/custom-components/client-java-paho/: README.md  pom.xml
uat/custom-components/client-java-sdk/: README.md  pom.xml
uat/custom-components/client-java-sdk/src/main/proto/: mqtt_client_control.proto
uat/custom-components/client-mosquitto-c/: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  pom.xml
uat/custom-components/client-mosquitto-c/scripts/: build_debug.sh  build_docker.sh  build_prod.sh  export_docker_runner.sh  generate-docs.sh  install.sh  produce_docker_container.sh  rebuild_docker.sh  rebuild_linux_debug.sh  rebuild_linux_prod.sh  rebuild_windows.bat  run_docker.sh
uat/custom-components/client-mosquitto-c/src/: CMakeLists.txt  ClientException.h  GRPCControlServer.cpp  GRPCControlServer.h  GRPCDiscoveryClient.cpp  GRPCDiscoveryClient.h  GRPCException.h  GRPCLib.cpp  GRPCLib.h  GRPCLink.cpp  GRPCLink.h  MqttConnection.cpp  MqttConnection.h  MqttException.h  MqttLib.cpp  MqttLib.h  logger.cpp  logger.h  main.cpp
uat/custom-components/client-mosquitto-c/tools/: build.sh
uat/custom-components/client-python-paho/: .gitignore  README.md  pom.xml
uat/custom-components/client-python-paho/scripts/: black_run.bat  black_run.sh  build.bat  build.sh  generate_grpc.bat  generate_grpc.sh  lint_run.bat  lint_run.sh
uat/custom-components/client-python-paho/src/: .flake8  .pylintrc  client-python-paho.spec  fix_generated.py  helper_client.py  main.py  pyproject.toml  requirements.txt  requirements_lint.txt
uat/custom-components/client-python-paho/src/exceptions/: client_exception.py  grpc_exception.py  mqtt_exception.py
uat/custom-components/client-python-paho/src/grpc_client_server/: grpc_control_server.py  grpc_discovery_client.py  grpc_lib.py  grpc_link.py
uat/custom-components/client-python-paho/src/grpc_client_server/grpc_generated/: __init__.py
uat/custom-components/client-python-paho/src/logger_setup/: __init__.py  logger_setup.py
uat/custom-components/client-python-paho/src/mqtt_lib/: mqtt_connection.py  mqtt_lib.py  temp_files_manager.py
uat/custom-components/src/main/proto/: mqtt_client_control.proto
uat/mqtt-client-control/: README.md  pom.xml
uat/proto/: CMakeLists.txt  mqtt_client_control.proto
uat/src/main/proto/: mqtt_client_control.proto
uat/src/proto/: mqtt_client_control.proto
uat/test-iot-device-sdk-mqtt5-client/: README.md  pom.xml
uat/testing-features/: pom.xml
uat/testing-features/src/main/resources/: log4j2.properties
(+646 files in other folders)
